fix(android): harden Bluetooth printer permission flow